--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.4",
     "expo": "~48.0.6",
     "expo-dev-client": "~2.1.5",
@@ -24,7 +25,7 @@
     "expo-splash-screen": "^0.18.1",
     "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.17.2",
+    "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
